--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ Author: yaminncco
 Colors:
 	Body 		  : #4A4E5A
 	Headers 	: #30323A
-	Primary 	: #E9B121
+	Primary 	: #EEB111
 	Dark 		  :	#30323A
 	Grey 		  : #DADADA #F6F7F8
 
@@ -59,7 +59,11 @@ Table OF Contents
 /*----------------------------*\
 	Typography
 \*----------------------------*/
-
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin:0;
+}
 body {
   font-family: 'Hind', sans-serif;
   color: #4A4E5A;
@@ -79,13 +83,13 @@ a {
 }
 
 a:hover, a:focus {
-  color: #E9B121;
+  color: #EEB111;
   text-decoration: none;
   outline: none;
 }
 
 .primary-color {
-  color: #E9B121;
+  color: #EEB111;
 }
 
 .white-color {
@@ -136,26 +140,26 @@ hr {
 }
 
 .main-btn {
-  color: #E9B121;
+  color: #EEB111;
   background-color: #FFF;
   -webkit-box-shadow: 0px 0px 0px 1px #DADADA inset, 0px 0px 0px 6px transparent;
   box-shadow: 0px 0px 0px 1px #DADADA inset, 0px 0px 0px 6px transparent;
 }
 
 .main-btn:hover, .main-btn:focus {
-  color: #E9B121;;
-  -webkit-box-shadow: 0px 0px 0px 1px #E9B121; inset, 0px 0px 0px 0px #E9B121;
-  box-shadow: 0px 0px 0px 1px #E9B121; inset, 0px 0px 0px 0px #E9B121;
+  color: #EEB111;;
+  -webkit-box-shadow: 0px 0px 0px 1px #EEB111; inset, 0px 0px 0px 0px #EEB111;
+  box-shadow: 0px 0px 0px 1px #EEB111; inset, 0px 0px 0px 0px #EEB111;
 }
 
 .primary-btn {
   color: #FFF;
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 .primary-btn:hover, .primary-btn:focus {
   color: #FFF;
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 /*----------------------------*\
@@ -175,8 +179,8 @@ hr {
 }
 
 .input:focus {
-  -webkit-box-shadow: 0px 0px 0px 1px #E9B121; inset, 0px 0px 0px 0px #E9B121;
-  box-shadow: 0px 0px 0px 1px #E9B121; inset, 0px 0px 0px 0px #E9B121;;
+  -webkit-box-shadow: 0px 0px 0px 1px #EEB111; inset, 0px 0px 0px 0px #EEB111;
+  box-shadow: 0px 0px 0px 1px #EEB111; inset, 0px 0px 0px 0px #EEB111;;
 }
 
 textarea.input {
@@ -232,7 +236,7 @@ textarea.input {
 }
 
 .list-links li>a:hover, .list-links li>a:focus, .list-links li.active>a {
-  color: #E9B121;
+  color: #EEB111;
   -webkit-transform: translateX(10px);
   -ms-transform: translateX(10px);
   transform: translateX(10px);
@@ -266,6 +270,7 @@ textarea.input {
 .section-title .title {
   display: inline-block;
   text-transform: uppercase;
+  font-size: 18px;
 }
 
 .section-title:after {
@@ -275,7 +280,7 @@ textarea.input {
   bottom: -1.5px;
   height: 3px;
   width: 60px;
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 /*----------------------------*\
@@ -296,7 +301,7 @@ textarea.input {
 }
 
 .breadcrumb>.active {
-  color: #E9B121;
+  color: #EEB111;
 }
 
 .breadcrumb>li+li:before {
@@ -419,7 +424,7 @@ textarea.input {
 
 .header-account.dropdown .custom-menu>li>a>i {
   margin-right: 15px;
-  color: #E9B121;
+  color: #EEB111;
 }
 
 /*----------------------------*\
@@ -435,7 +440,7 @@ textarea.input {
   line-height: 18px;
   text-align: center;
   font-size: 10px;
-  background: #E9B121;
+  background: #EEB111;
   color: #FFF;
   border-radius: 50%;
 }
@@ -487,7 +492,7 @@ textarea.input {
   padding: 15px;
   display: block;
   text-transform: uppercase;
-  background: #E9B121;
+  background: #EEB111;
   color: #FFF;
   font-weight: 700;
 }
@@ -541,7 +546,7 @@ textarea.input {
 }
 
 .category-nav .category-list>li>a:hover, .category-nav .category-list>li>a:focus, .category-nav .category-list>li.dropdown.open>a {
-  color: #E9B121;
+  color: #EEB111;
 }
 
 /*----------------------------*\
@@ -574,7 +579,7 @@ textarea.input {
 }
 
 .menu-nav .menu-list>li>a:hover, .menu-nav .menu-list>li>a:focus, .menu-nav .menu-list>li.dropdown.open>a {
-  color: #F8694A;
+  color: #EEB111;
 }
 
 /*----------------------------*\
@@ -604,7 +609,7 @@ textarea.input {
 /*-- Default Dropdown --*/
 
 .dropdown.default-dropdown>.custom-menu {
-  border-top: 2px solid #E9B121;
+  border-top: 2px solid #EEB111;
   left: 50%;
   -webkit-transform: translateX(-50%) translateY(15px);
   -ms-transform: translateX(-50%) translateY(15px);
@@ -630,7 +635,7 @@ textarea.input {
 }
 
 .dropdown.mega-dropdown>.custom-menu {
-  border-top: 2px solid #E9B121;;
+  border-top: 2px solid #EEB111;;
   left: 0;
   -webkit-transform: translate(0px, 15px);
   -ms-transform: translate(0px, 15px);
@@ -653,7 +658,7 @@ textarea.input {
 /*-- Side Dropdown --*/
 
 .dropdown.side-dropdown>.custom-menu {
-  border-left: 2px solid #E9B121;
+  border-left: 2px solid #EEB111;
   left: 100%;
   top: 0;
   width: 750px;
@@ -715,7 +720,7 @@ textarea.input {
     -webkit-box-shadow: none;
     box-shadow: none;
     border-top: none;
-    border-left: 2px solid #F8694A;
+    border-left: 2px solid #EEB111;
   }
   #responsive-nav .dropdown.open .custom-menu {
     display: block;
@@ -826,7 +831,7 @@ textarea.input {
 ===========================================================*/
 
 .product .product-old-price {
-  color: #E9B121;
+  color: #EEB111;
   font-size: 70%;
 }
 
@@ -853,7 +858,7 @@ textarea.input {
 }
 
 .product .product-label>span.sale {
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 .product .product-countdown {
@@ -877,7 +882,7 @@ textarea.input {
   color: #FFF;
   font-weight: 700;
   padding: 10px;
-  background: #E9B121;
+  background: #EEB111;
 }
 
 /*----------------------------*\
@@ -996,7 +1001,7 @@ textarea.input {
 /*-- hot product --*/
 
 .product.product-single.product-hot {
-  border: 2px solid #F8694A;
+  border: 2px solid #EEB111;
 }
 
 .product.product-single.product-hot .product-btns {
@@ -1101,7 +1106,7 @@ textarea.input {
   bottom: -1.5px;
   height: 3px;
   width: 60px;
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 /*-- Filter list --*/
@@ -1156,7 +1161,7 @@ textarea.input {
 }
 
 .noUi-connect {
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 .noUi-horizontal {
@@ -1223,7 +1228,7 @@ textarea.input {
 }
 
 .row-filter>a.active {
-  background-color: #E9B121;
+  background-color: #EEB111;
   }
 
 .sort-filter {
@@ -1260,7 +1265,7 @@ textarea.input {
 }
 
 .store-pages li.active {
-  color: #F8694A;
+  color: #EEB111;
 }
 
 /*=========================================================
@@ -1290,8 +1295,8 @@ textarea.input {
 
 #product-view .product-view.slick-slide.slick-current {
   opacity: 1;
-  -webkit-box-shadow: 0px 0px 0px 2px #F8694A inset;
-  box-shadow: 0px 0px 0px 2px #F8694A inset;
+  -webkit-box-shadow: 0px 0px 0px 2px #EEB111 inset;
+  box-shadow: 0px 0px 0px 2px #EEB111 inset;
 }
 
 #product-view .product-view {
@@ -1345,8 +1350,8 @@ textarea.input {
 }
 
 .size-option>li.active a {
-  color: #F8694A;
-  border-color: #F8694A;
+  color: #EEB111;
+  border-color: #EEB111;
 }
 
 .color-option>li {
@@ -1367,8 +1372,8 @@ textarea.input {
 }
 
 .color-option>li.active a {
-  -webkit-box-shadow: 0px 0px 0px 2px #FFF, 0px 0px 0px 3px #F8694A;
-  box-shadow: 0px 0px 0px 2px #FFF, 0px 0px 0px 3px #F8694A;
+  -webkit-box-shadow: 0px 0px 0px 2px #FFF, 0px 0px 0px 3px #EEB111;
+  box-shadow: 0px 0px 0px 2px #FFF, 0px 0px 0px 3px #EEB111;
 }
 
 .product.product-details .qty-input {
@@ -1412,7 +1417,7 @@ textarea.input {
 }
 
 .product-tab .tab-nav li.active a {
-  color: #E9B121;
+  color: #EEB111;
 }
 
 .product-tab .tab-nav li.active a:after {
@@ -1422,7 +1427,7 @@ textarea.input {
   bottom: -1.5px;
   height: 3px;
   width: 30px;
-  background-color: #E9B121;
+  background-color: #EEB111;
 }
 
 /*-- reviews --*/
@@ -1467,7 +1472,7 @@ textarea.input {
 }
 
 .reviews-pages li.active {
-  color: #F8694A;
+  color: #EEB111;
 }
 
 /*-- review form --*/
@@ -1585,7 +1590,7 @@ textarea.input {
 
 .shopping-cart-table>tfoot>tr>.total {
   font-size: 24px;
-  color: #F8694A;
+  color: #EEB111;
 }
 
 /*=========================================================
@@ -1647,7 +1652,7 @@ textarea.input {
 }
 
 .slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-  background: #F8694A;
+  background: #EEB111;
 }
 
 .slick-prev:before, .slick-next:before {
@@ -1687,7 +1692,7 @@ textarea.input {
 }
 
 .slick-dots li.slick-active button:before {
-  background-color: #F8694A;
+  background-color: #EEB111;
 }
 
 .custom-dots .slick-dots {
@@ -1709,6 +1714,9 @@ textarea.input {
   .product-reviews {
     margin-bottom: 30px;
   }
+  h4{
+    font-size: 20px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -1721,11 +1729,17 @@ textarea.input {
   .store-filter .pull-right {
     margin-top: 15px;
   }
+  h4{
+    font-size: 20px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
   [class*='col-xs'] {
     width: 100%;
+  }
+  h4{
+    font-size: 20px;
   }
 }
 
@@ -1744,4 +1758,8 @@ textarea.input {
 
 table#table-formas-pago  th{
   text-align: center;
+}
+#login-logo-header{
+  width: 100%;
+  max-width: 330px;
 }
